--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:sql12.freesqldatabase.com}:3306/sql12666797
+#spring.datasource.username=sql12666797
+#spring.datasource.password=JRIxeRAlMx
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring_auto
 spring.datasource.username=root
 spring.datasource.password=root
