--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <modules>
         <module>RandomAuto</module>
         <module>BackOffice</module>
-        <module>BackOffice</module>
+        <module>KafkaSend</module>
     </modules>
     <properties>
         <java.version>17</java.version>
