--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>RandomAuto</module>
         <module>BackOffice</module>
         <module>KafkaSend</module>
+        <module>KafkaGet</module>
     </modules>
     <properties>
         <java.version>17</java.version>
