add module CarGenerate and DB barand and model

--- a/RandomAuto/pom.xml
+++ b/RandomAuto/pom.xml
@@ -8,7 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>MiddleQuality</groupId>
-    <artifactId>RandomCars</artifactId>
+    <artifactId>RandomAuto</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>RandomCars</name>
     <description>RandomCars</description>
