--- a/BackOffice/pom.xml
+++ b/BackOffice/pom.xml
@@ -8,7 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>karmiel</groupId>
-    <artifactId>BackOfffice</artifactId>
+    <artifactId>BackOffice</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <properties>
         <java.version>17</java.version>
