--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,10 @@
     <modules>
         <module>RandomAuto</module>
         <module>BackOffice</module>
+        <module>CarPrepair</module>
         <module>KafkaSend</module>
         <module>KafkaGet</module>
+        <module>CarGenerator</module>
     </modules>
     <properties>
         <java.version>17</java.version>
