--- a/BackOffice/pom.xml
+++ b/BackOffice/pom.xml
@@ -54,6 +54,12 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>karmiel</groupId>
+            <artifactId>CarGenerator</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
