--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>KafkaSend</module>
         <module>KafkaGet</module>
         <module>CarGenerator</module>
+        <module>CarApprove</module>
     </modules>
     <properties>
         <java.version>17</java.version>
