--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>KafkaGet</module>
         <module>CarGenerator</module>
         <module>CarApprove</module>
+        <module>CarHistory</module>
     </modules>
     <properties>
         <java.version>17</java.version>
