--- a/CarParts/src/main/resources/application.properties
+++ b/CarParts/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=0
-spring.kafka.consumer.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=car-parts-group
-spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.datasource.url=jdbc:mysql://localhost:3306/parts
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
