change backOffice and CarInfo

--- a/CarGenerator/pom.xml
+++ b/CarGenerator/pom.xml
@@ -16,6 +16,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring.kafka.version>2.7.5</spring.kafka.version>
+        <kafka.clients.version>3.0.0</kafka.clients.version>
     </properties>
 
     <dependencies>
@@ -24,10 +27,6 @@
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -50,21 +49,25 @@
             <version>5.8.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- Обновленные зависимости Spring Kafka -->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka-test</artifactId>
-            <version>3.0.11</version>
+            <version>${spring.kafka.version}</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
-            <version>3.6.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
+            <version>${spring.kafka.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- Обновленная зависимость Kafka Clients -->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>${kafka.clients.version}</version>
         </dependency>
 
     </dependencies>
