--- a/CarPrepair/src/main/resources/application.properties
+++ b/CarPrepair/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=0
-io.reflectoring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=myGroup
+server.port=8080
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=car_dto_ready
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.producer.bootstrap-servers=localhost:9092
