--- a/CarPrepair/src/main/resources/application.properties
+++ b/CarPrepair/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=0
 io.reflectoring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=myGroup
+spring.kafka.consumer.group-id=car-prepair
