--- a/CarPrepair/pom.xml
+++ b/CarPrepair/pom.xml
@@ -60,6 +60,11 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>3.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
