--- a/CarApprove/pom.xml
+++ b/CarApprove/pom.xml
@@ -47,5 +47,10 @@
             <artifactId>spring-kafka</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.2.9.Final</version>
+        </dependency>
     </dependencies>
 </project>
