--- a/CarInfo/src/main/resources/application.properties
+++ b/CarInfo/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.parts.password=root
 spring.datasource.parts.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DB (sales)
-spring.datasource.sales.url=jdbc:mysql://localhost:3306/sales
+spring.datasource.sales.url=jdbc:mysql://localhost:3306/sale
 spring.datasource.sales.username=root
 spring.datasource.sales.password=root
 spring.datasource.sales.driver-class-name=com.mysql.cj.jdbc.Driver
