--- a/CarGenerator/pom.xml
+++ b/CarGenerator/pom.xml
@@ -63,7 +63,15 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Обновленная зависимость Kafka Clients -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
